fixed vertical alignment for links to activity page. kind of hacky, looks fine in chrome and firefox

--- a/web/stylus/styles/button.styl
+++ b/web/stylus/styles/button.styl
@@ -77,6 +77,11 @@ button, .button
       vertical-align middle
       margin-right b8
 
+  &.view-title-text.mini
+    line-height b2
+    padding-height 5px
+    vertical-align middle
+    margin-bottom b4
 // link button
 
 a.button
